--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,20 +3,33 @@
 }
 body {
   font-family: sans-serif;
-  width: 1200px;
-  margin: 0 auto;
 }
 .heading {
   text-transform: uppercase;
   font-weight: bold;
-  padding: 20px;
+  margin-top: 20px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  flex-wrap: wrap;
 }
 .sub_content {
   opacity: 0.6;
   line-height: 1.3em;
   text-align: justify;
+  margin-top: 20px;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .content {
   text-align: center;
   padding: 20px 10px;
+}
+.icon {
+  max-height: 110px;
+  min-height: 110px;
+  min-width: 75px;
+  max-width: 120px;
 }
